# flutter_ble_peripheral

./: .gitignore  .metadata  CHANGELOG.md  LICENSE  README.md  analysis_options.yaml  pubspec.yaml
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: flutter_build.yml  flutter_format.yml  flutter_test.yml
android/: build.gradle  settings.gradle
android/gradle/wrapper/: gradle-wrapper.properties
android/src/main/: AndroidManifest.xml
example/: README.md  analysis_options.yaml  pubspec.yaml
example/android/: build.gradle
example/android/app/: build.gradle
example/ios/Flutter/: .last_build_id
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: ble_status_screen.dart  main.dart
example/macos/Runner/: Info.plist
example/macos/Runner.xcodeproj/: project.pbxproj
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: flutter_ble_peripheral.podspec
ios/Classes/: CallbackManager.swift  Constants.swift  FlutterBlePeripheralManager.swift  FlutterBlePeripheralPlugin.h  FlutterBlePeripheralPlugin.m  NotificationManager.swift  Peripheral.swift  SubscriptionManager.swift  SwiftFlutterBlePeripheralPlugin.swift
ios/Classes/Models/: CharacteristicDescription.swift  PeripheralData.swift  PeripheralState.swift  ServiceDescription.swift
ios/Classes/callbacks/: PeripheralManagerDelegate.swift
ios/Classes/handlers/: DataReceivedHandler.swift  MtuChangedHandler.swift  StateChangedHandler.swift
lib/: data.dart  flutter_ble_peripheral.dart  main.dart
lib/src/: advertise_data.dart  constants.dart  flutter_ble_peripheral.dart  utils.dart
lib/src/models/: advertise_data.dart  advertise_data.g.dart  advertise_error.dart  advertise_exception.dart  advertise_set_parameters.dart  advertise_set_parameters.g.dart  advertise_settings.dart  advertise_settings.g.dart  characteristic_description.dart  constants.dart  map_uint8list_converter.dart  message_packet.dart  periodic_advertise_settings.dart  periodic_advertise_settings.g.dart  peripheral_state.dart  permission_state.dart  service_description.dart  uint8list_converter.dart  uint8list_map_string_converter.dart
macos/: flutter_ble_peripheral.podspec
macos/Classes/: FlutterBlePeripheralManager.swift  FlutterBlePeripheralPlugin.h  Peripheral.swift  SwiftFlutterBlePeripheralPlugin.swift
macos/Classes/Models/: PeripheralData.swift
macos/Classes/callbacks/: PeripheralManagerDelegate.swift
macos/Classes/handlers/: MtuChangedHandler.swift  StateChangedHandler.swift
test/: flutter_ble_peripheral_test.dart  main.dart
windows/: CMakeLists.txt  flutter_ble_peripheral_plugin.cpp  flutter_ble_peripheral_plugin.h  flutter_ble_peripheral_plugin_c_api.cpp
windows/include/flutter_ble_peripheral/: flutter_ble_peripheral_plugin_c_api.h
(+44 files in other folders)
